--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -11,22 +11,80 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.11','3.12', '3.13', '3.14']
+        python-version: ['3.11','3.12']
+    
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_rto
+          POSTGRES_USER: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+      
+      redis:
+        image: redis:7-alpine
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+    
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install
+          cache: 'pip'
+      
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r apps/control-plane/requirements.txt || true
-          pip install -r apps/ai-gateway/requirements.txt || true
+          pip install -r apps/control-plane/requirements.txt
+          pip install -r apps/ai-gateway/requirements.txt
           pip install -r libs/common-py/requirements.txt || true
-      - name: Lint & Test
+          pip install pytest pytest-cov pytest-django pytest-asyncio mypy ruff black
+      
+      - name: Lint with ruff
+        run: ruff check apps/ libs/
+        continue-on-error: true
+      
+      - name: Check formatting with black
+        run: black --check apps/ libs/
+        continue-on-error: true
+      
+      - name: Type check with mypy
+        run: mypy libs/common-py || true
+        continue-on-error: true
+      
+      - name: Run tests
+        env:
+          DJANGO_SECRET_KEY: test-secret-key
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_NAME: test_rto
+          DB_USER: postgres
+          DB_PASSWORD: postgres
+          CELERY_BROKER_URL: redis://localhost:6379/0
+          REDIS_URL: redis://localhost:6379/1
         run: |
-          pip install ruff black pytest pytest-cov mypy
-          ruff .
-          black --check .
-          mypy libs/common-py || true
-          pytest -q || true
+          cd apps/control-plane
+          python manage.py migrate
+          pytest --cov --cov-report=xml
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./apps/control-plane/coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+        continue-on-error: true
