--- a/apps/ai-gateway/requirements.txt
+++ b/apps/ai-gateway/requirements.txt
@@ -1,4 +1,8 @@
-fastapi>=0.115
-uvicorn[standard]>=0.30
-pydantic>=2.9
-httpx>=0.27
+fastapi==0.115.4
+uvicorn[standard]==0.32.0
+pydantic==2.9.2
+pydantic-settings==2.5.2
+httpx==0.27.2
+redis==5.1.1
+python-json-logger==3.1.0
+python-dotenv==1.0.1
