--- a/apps/control-plane/requirements.txt
+++ b/apps/control-plane/requirements.txt
@@ -1,5 +1,15 @@
-Django>=5.0,<6.0
-djangorestframework>=3.15
-psycopg[binary]>=3.2
-django-tenants>=3.6
-python-dotenv>=1.0
+Django==5.1.2
+djangorestframework==3.15.2
+psycopg[binary]==3.2.3
+django-tenants==3.7.0
+python-dotenv==1.0.1
+celery==5.4.0
+redis==5.1.1
+django-redis==5.4.0
+django-cors-headers==4.5.0
+django-filter==24.3
+python-json-logger==3.1.0
+gunicorn==23.0.0
+sentry-sdk==2.16.0
+pydantic==2.9.2
+pydantic-settings==2.5.2
