feat: Initial commit of NextCore AI Cloud web portal
- Implemented tenant dashboard with authentication and loading states.
- Created main dashboard page to display user tenants and admin functions.
- Added login and registration pages with form handling and API integration.
- Developed email verification page for user account confirmation.
- Established API utility functions for user registration, login, and tenant management.
- Set up global styles using Tailwind CSS.
- Configured TypeScript settings and Tailwind CSS for the project.
- Added shell script for setting up the web portal environment and starting the development server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,8 @@ services:
       - DB_NAME=rto
       - DB_USER=postgres
       - DB_PASSWORD=postgres
+      - DJANGO_SECRET_KEY=dev-secret-key-change-in-production
+      - DJANGO_DEBUG=True
     depends_on:
       db:
         condition: service_healthy
@@ -85,6 +87,7 @@ services:
         condition: service_healthy
     volumes:
       - ./apps/worker:/app
+      - ./apps/control-plane:/control-plane
 
   ai-gateway:
     build:
