--- a/apps/worker/requirements.txt
+++ b/apps/worker/requirements.txt
@@ -1,5 +1,13 @@
+Django==5.1.2
+djangorestframework==3.15.2
+psycopg[binary]==3.2.3
+django-tenants==3.7.0
+python-dotenv==1.0.1
 celery==5.4.0
 redis==5.1.1
-Django==5.1.2
-psycopg[binary]==3.2.3
-python-dotenv==1.0.1
+django-redis==5.4.0
+django-cors-headers==4.5.0
+django-filter==24.3
+python-json-logger==3.1.0
+pydantic==2.9.2
+pydantic-settings==2.5.2
