--- a/apps/control-plane/requirements.txt
+++ b/apps/control-plane/requirements.txt
@@ -14,5 +14,6 @@ sentry-sdk==2.16.0
 pydantic==2.9.2
 pydantic-settings==2.5.2
 beautifulsoup4==4.12.3
-requests==2.31.0
+requests==2.32.3
+urllib3==2.2.3
 lxml==5.1.0
