feat: Update funding eligibility views and API integration
- Changed JurisdictionViewSet to allow public access by updating permission classes to AllowAny.
- Added pgvector dependency to requirements.txt for vector database support.
- Updated package-lock.json and package.json to include new dependencies: @tanstack/react-query and lucide-react, and upgraded axios.
- Refactored FundingEligibilityPage component to fetch jurisdictions using the new useJurisdictions hook.
- Implemented modal for editing jurisdiction requirements with state management for form inputs.
- Created api-client.ts for centralized API requests using axios with interceptors for authentication and error handling.
- Updated hooks to use the new apiClient for making API calls.
- Enhanced layout to include Providers for React Query context.

--- a/.github/workflows/release-semver.yml
+++ b/.github/workflows/release-semver.yml
@@ -5,8 +5,14 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write       # Required to push tags and update releases
+      issues: write         # Required to comment on issues
+      pull-requests: write  # Required to comment on PRs
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0    # Fetch all history for semantic-release to analyze commits
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
