--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -15,7 +15,7 @@ jobs:
     
     services:
       postgres:
-        image: postgres:16
+        image: pgvector/pgvector:pg16
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: test_rto
