--- a/apps/control-plane/requirements.txt
+++ b/apps/control-plane/requirements.txt
@@ -1,6 +1,7 @@
 Django==5.1.2
 djangorestframework==3.15.2
 psycopg[binary]==3.2.3
+pgvector==0.3.5
 django-tenants==3.7.0
 python-dotenv==1.0.1
 celery==5.4.0
