--- a/.github/workflows/release-semver.yml
+++ b/.github/workflows/release-semver.yml
@@ -15,5 +15,9 @@ jobs:
           fetch-depth: 0    # Fetch all history for semantic-release to analyze commits
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
+        with:
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
