--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -17,7 +17,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Install Python dependencies
 COPY requirements.txt .
-RUN pip install --user --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip==25.3 && \
+    pip install --user --no-cache-dir -r requirements.txt
 
 # Final stage
 FROM python:3.12-slim
