fix: upgrade pip in Dockerfiles for AI Gateway, Control Plane, and Worker

--- a/apps/ai-gateway/Dockerfile
+++ b/apps/ai-gateway/Dockerfile
@@ -24,6 +24,9 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 WORKDIR /app
 
+# Upgrade pip in final stage
+RUN pip install --upgrade pip==25.3
+
 # Create non-root user
 RUN useradd -m -u 1000 appuser && \
     chown -R appuser:appuser /app
