--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -31,10 +31,11 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 WORKDIR /app
 
-# Install runtime dependencies
+# Install runtime dependencies and upgrade pip
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && pip install --upgrade pip==25.3
 
 # Create non-root user
 RUN useradd -m -u 1000 appuser && \
