--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -8,7 +8,8 @@ on:
   pull_request:
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: 
+      [self-hosted, nextcore]
     strategy:
       matrix:
         python-version: ['3.11','3.12']
