--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -8,7 +8,7 @@ on:
         options: [dev, staging, prod]
 jobs:
   migrate:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, nextcore]
     environment: ${{ inputs.environment }}
     permissions:
       id-token: write
