--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       retries: 3
 
   control-plane:
+    image: nextcore-ai-backend/control-plane:${IMAGE_TAG:-dev}
     build:
       context: ./apps/control-plane
       dockerfile: Dockerfile
@@ -65,8 +66,15 @@ services:
     volumes:
       - ./apps/control-plane:/app
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   worker:
+    image: nextcore-ai-backend/worker:${IMAGE_TAG:-dev}
     build:
       context: ./apps/worker
       dockerfile: Dockerfile
@@ -88,8 +96,15 @@ services:
     volumes:
       - ./apps/worker:/app
       - ./apps/control-plane:/control-plane
+    healthcheck:
+      test: ["CMD-SHELL", "celery -A worker inspect ping || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   ai-gateway:
+    image: nextcore-ai-backend/ai-gateway:${IMAGE_TAG:-dev}
     build:
       context: ./apps/ai-gateway
       dockerfile: Dockerfile
@@ -102,6 +117,12 @@ services:
         condition: service_healthy
     volumes:
       - ./apps/ai-gateway:/app
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   pgdata: {}
