added mandatory description to environment input

--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       environment:
+        description: 'Environment to run migrations'
         required: true
         type: choice
         options: [dev, staging, prod]
