feat: Update project references from NextCore to RTOComply across multiple files

--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -9,7 +9,7 @@ on:
         options: [dev, staging, prod]
 jobs:
   migrate:
-    runs-on: [self-hosted, nextcore]
+    runs-on: [self-hosted, rtocomply]
     environment: ${{ inputs.environment }}
     permissions:
       id-token: write
