ci: standardize GitHub Actions runner labels to `backend` across workflows and ignore `actions-runner` directory.

--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -9,7 +9,7 @@ on:
         options: [dev, staging, prod]
 jobs:
   migrate:
-    runs-on: [self-hosted, rtocomply]
+    runs-on: [self-hosted, backend]
     environment: ${{ inputs.environment }}
     permissions:
       id-token: write
