--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -13,7 +13,7 @@ jobs:
 
   build:
     runs-on: 
-      [self-hosted, nextcore]
+      [self-hosted, backend]
     permissions:
       contents: read
       packages: write
