--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -10,7 +10,7 @@ on:
         type: string
 jobs:
   deploy:
-    runs-on: [self-hosted, nextcore]
+    runs-on: [self-hosted, backend]
     environment: ${{ inputs.environment }}
     permissions:
       id-token: write
