--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       POSTGRES_DB: rto
       POSTGRES_USER: postgres
     ports: [ "5432:5432" ]
-    volumes: 
+    volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -21,7 +21,7 @@ services:
     volumes:
       - redis_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -36,7 +36,7 @@ services:
     ports: [ "9000:9000", "9001:9001" ]
     volumes: [ "minio:/data" ]
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 30s
       timeout: 20s
       retries: 3
@@ -67,7 +67,7 @@ services:
       - ./apps/control-plane:/app
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: [ "CMD", "python", "-c", "import http.client; conn = http.client.HTTPConnection('localhost', 8000); conn.request('GET', '/health'); r = conn.getresponse(); exit(0 if r.status == 200 else 1)" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -97,7 +97,7 @@ services:
       - ./apps/worker:/app
       - ./apps/control-plane:/control-plane
     healthcheck:
-      test: ["CMD-SHELL", "celery -A worker inspect ping || exit 1"]
+      test: [ "CMD-SHELL", "celery -A worker inspect ping || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -118,7 +118,7 @@ services:
     volumes:
       - ./apps/ai-gateway:/app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      test: [ "CMD", "python", "-c", "import http.client; conn = http.client.HTTPConnection('localhost', 8080); conn.request('GET', '/health'); r = conn.getresponse(); exit(0 if r.status == 200 else 1)" ]
       interval: 30s
       timeout: 10s
       retries: 3
