--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - REDIS_URL=redis://redis:6379/1
       - CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:8000,https://dev.rtocomply.ai
+      - ALLOWED_HOSTS=localhost,127.0.0.1,dev-api.rtocomply.ai
     depends_on:
       db:
         condition: service_healthy
