feat: Add Supabase environment variables to deployment workflow, docker-compose, and example environment file.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ AWS_S3_BUCKET=rto-dev-bucket
 # OpenAI/Model routing
 MODEL_PROVIDER=openai
 OPENAI_API_KEY=changeme
+
+# Supabase
+SUPABASE_URL=https://iwwthphefhvirmiadmzn.supabase.co
+SUPABASE_JWT_SECRET=your_jwt_secret
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
